--- a/package.json
+++ b/package.json
@@ -4,34 +4,33 @@
 	"description": "A simple Bot chat messenger using personal account. Made by NTKhang.",
 	"main": "index.js",
 	"engines": {
-		"node": "20.x",
-		"npm": ">=10.0.0"
+		"node": "18.x",
+		"npm": ">=7.0.0"
 	},
 	"dependencies": {
 		"@distube/ytdl-core": "^4.13.3",
-		"axios": "^1.7.9",
+		"axios": "^1.4.0",
 		"bcrypt": "^5.0.1",
-		"boxai": "^1.0.2",
-		"canvas": "^2.11.2",
+		"bluebird": "^3.7.2",
+		"canvas": "^2.9.1",
 		"cheerio": "^1.0.0-rc.12",
 		"child_process": "^1.0.2",
 		"connect-flash": "^0.1.1",
 		"cookie-parser": "^1.4.6",
 		"discord-image-generation": "^1.4.25",
-		"eta": "^3.5.0",
+		"eta": "^1.12.3",
 		"express": "^4.18.1",
 		"express-fileupload": "^1.4.0",
 		"express-rate-limit": "^6.5.2",
 		"express-session": "^1.17.3",
-		"fb-watchman": "^2.0.2",
 		"fca-liane-utils": "^1.4.0",
 		"form-data": "^4.0.0",
 		"fs": "^0.0.1-security",
-		"fs-extra": "^11.2.0",
+		"fs-extra": "^11.1.0",
 		"googleapis": "^100.0.0",
+		"got": "^14.4.5",
 		"gradient-string": "^2.0.2",
 		"graphql-query-to-json": "^2.0.1",
-		"http": "^0.0.1-security",
 		"https": "^1.0.0",
 		"jimp": "^0.16.13",
 		"jsonlint-mod": "^1.7.6",
@@ -42,14 +41,11 @@
 		"node-cron": "^3.0.2",
 		"nodemailer": "^6.7.5",
 		"npmlog": "^7.0.1",
-		"openai": "^4.80.1",
 		"ora": "^5.4.1",
 		"passport": "^0.6.0",
 		"passport-local": "^1.0.0",
-		"pastebin-api": "^7.0.0",
 		"pastebin-js": "^1.0.6",
 		"path": "^0.12.7",
-		"priyanshu-fca": "^3.0.0",
 		"qrcode-reader": "^1.0.4",
 		"qs": "^6.11.0",
 		"readline": "^1.3.0",
@@ -58,15 +54,13 @@
 		"sequelize": "^6.19.0",
 		"socket.io": "^4.5.1",
 		"sqlite3": "^5.0.5",
-		"srod-v2": "^1.0.2",
 		"stream": "^0.0.3",
 		"tinyurl": "^1.1.7",
 		"totp-generator": "^0.0.13",
 		"url": "^0.11.4",
-		"websocket-stream": "^5.3.0",
-		"wikijs": "^6.4.1",
+		"websocket-stream": "^5.5.2",
 		"ws3-fca": "^1.0.41",
-		"yt-search": "^2.6.1",
+		"yt-search": "^2.12.1",
 		"ytdl-core": "^4.11.5"
 	},
 	"scripts": {
